Add tests for kotlin dsl